# weatherservie_bot

./: .gitignore  Makefile  README.md  weather_bot  weather_bot.c
rust_weather/: Cargo.toml
rust_weather/src/: lib.rs
telebot/: CMakeCache.txt  Makefile  cmake_install.cmake  telebot.pc
telebot/include/: telebot.h
telebot/lib/: libtelebot.so.4.7.0
telebot/test/: Makefile  cmake_install.cmake  echobot
