[package]
name = "rust_weather"
version = "0.1.0"
edition = "2024"

[dependencies]
open-meteo-api = "0.1.4"  
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }


[lib]
name = "weather"
crate-type = ["cdylib"]  # Generate a C-compatible shared library
